# vdt

./: CMakeLists.txt  README.md  VDTUtility.cmake
cmake/: vdt-config-version.cmake.in  vdt-config.cmake.in  vdt.pc.in  vdtCPack.cmake  vdtConfig.cmake.in  vdtCreateConfig.cmake  vdtUninstall.cmake
doc/: Doxyfile.in
lib/: CMakeLists.txt
progs/: CMakeLists.txt
src/: CMakeLists.txt
testing/: CMakeLists.txt
testing/diagnostic/: externalLibcfg.h.cmake
testing/units/: CMakeLists.txt
vdt/: CMakeLists.txt  vdtMath.cc.in  vdtMathPreload.icc
